Bug 155086 - Impress and Draw use green (accent 1) default for shapes and lines
Summary: Impress and Draw use green (accent 1) default for shapes and lines
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Document-Themes Shapes
  Show dependency treegraph
 
Reported: 2023-04-30 08:27 UTC by stragu
Modified: 2023-07-17 12:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-04-30 08:27:28 UTC
The default colour for area and line changed to accent 1 and accent 1 (50% darker) respectively in Impress and Draw shapes.

Bibisected in linux-64-7.5 repo to first bad commit 34c4a1709bd20127d98085e08b5c031fb6e613d9 which points to core commit:

commit c3f7720ff13c34b9cf2c90d9c9b6dcc3d8f4c7a5
author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	Thu Mar 23 11:37:40 2023 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	Mon Apr 24 23:49:57 2023 +0200
oox: extend ThemeExport to export font and format scheme of a theme
Also use the ThemeExport when exporting PPTX documents and remove
all the hard-coded theme bits.
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149363

Tomaž, I see that's not the case for e.g. Writer. Can you please have a look?
Comment 1 Tomaz Vajngerl 2023-05-01 06:21:50 UTC
so what the issue actually? Accent 1 as the default color or Writer still having the old one as default? 

Using accent 1 theme color as default for fill is mostly by mistake - Miklos added that if there is a theme associated (which it wasn't) it should use the accent 1 color in this cases. What I changed is just that we always have a theme associated with the document so using theme colors is possible. 

So how should this be fixed?
Comment 2 Maxim Monastirsky 2023-05-01 07:41:14 UTC
To me, the main problem seems to be that themes are applied as DF, making the fill settings of the default drawing style useless, as they're overwritten anyway. I would prefer to revert the default accent 1 setting, unless we find a way to integrate that with styles.
Comment 3 Tomaz Vajngerl 2023-05-01 08:52:49 UTC
(In reply to Maxim Monastirsky from comment #2)
> To me, the main problem seems to be that themes are applied as DF, making
> the fill settings of the default drawing style useless, as they're
> overwritten anyway. I would prefer to revert the default accent 1 setting,
> unless we find a way to integrate that with styles.

Themes are integrated with styles.. it's just a matter of setting it for the default drawing style, which indeed is an issue. We do it on top as DF for a new shape instead, probably because it was easier to do.
Comment 4 Maxim Monastirsky 2023-05-01 09:56:34 UTC
(In reply to Tomaz Vajngerl from comment #3)
> Themes are integrated with styles.. it's just a matter of setting it for the
> default drawing style
This doesn't seem to work for me. If I set the default drawing style to a theme color, and then modify the theme (in the master slide's properties dialog), then the new color is applied to existing shapes again as DF, while the style remains unchanged. Moreover - if I then create a second master page with a different theme color, then shapes placed there continue to use the theme color from the former master. So while it's indeed possible to select a theme color in the style editing dialog, it just sets the given color explicitly, instead of telling the style to get the actual color from the current master each time.
Comment 5 Tomaz Vajngerl 2023-05-01 11:57:33 UTC
(In reply to Maxim Monastirsky from comment #4)
> (In reply to Tomaz Vajngerl from comment #3)
> This doesn't seem to work for me. If I set the default drawing style to a
> theme color, and then modify the theme (in the master slide's properties
> dialog), then the new color is applied to existing shapes again as DF, while
> the style remains unchanged. Moreover - if I then create a second master
> page with a different theme color, then shapes placed there continue to use
> the theme color from the former master. So while it's indeed possible to
> select a theme color in the style editing dialog, it just sets the given
> color explicitly, instead of telling the style to get the actual color from
> the current master each time.

Ah right - I see what you mean now and that needs to be fixed. My priority is Writer (where styles are taken into account) and later Calc, so I haven't yet looked into this yet.
Comment 6 Commit Notification 2023-06-19 11:36:57 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2afff27c5327bcb30f894d9a507131f2ad8f1dc6

tdf#155086 remove code that sets theme color to shapes as DF

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-06-20 08:11:09 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/cf36777e8df6ed7233e3c6c6fc0ba0a1ed505cfb

tdf#155086 remove code that sets theme color to shapes as DF

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 stragu 2023-06-21 16:13:33 UTC
Verified in Draw with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 66da786bdd4588b31755058acf46034c2056215c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Should this be set to fixed, Tomaž?
Comment 9 Tomaz Vajngerl 2023-07-16 13:42:37 UTC
 It think so yes
Comment 10 stragu 2023-07-17 12:20:13 UTC
Thanks! Verified.